--- a/frontend/src/i18n/en.json
+++ b/frontend/src/i18n/en.json
@@ -7,7 +7,7 @@
   },
   "footer": {
     "copyright": "Copyright",
-    "insight": "ZenView",
+    "insight": "HMI",
     "all_rights_reserved": " All rights reserved."
   },
   "sidebar": {
@@ -25,6 +25,7 @@
     "settings": "Settings",
     "revenueManagement": "Revenue Management",
     "accountManagement": "Account Management",
+    "overview": "OverView",
     "files": "Files",
     "admin": "Admin",
     "productEngagement": "Product Engagement",
